--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="con">
         <input class="text" type="text" />
-        <button class="btn-add">Add this Task</button>
+        <button class="btn-add">Add Task</button>
         <button class="btn-clear">Remove</button>
       </div>
       <div class="color-grp">
